--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,11 @@ description: Portfolio
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
-  Resume: 
-  Portfolio:
-"
+#  About Me: "aboutme"
+  Portfolio: "portfolio"
+  Resume: "resources/Kratz_Resume.pdf"
+  #Portfolio:
+
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -84,7 +85,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+#url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
